methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  while (biscuit==0){
    var biscuit=0
    forward()
    if (getGroundColor()==Color.green){
      if (estSurBiscuit()){
        prendBiscuit()
        biscuit = biscuit + 1
      }
      baisseBrosse()
      leveBrosse()
    }
    else {
      backward()
      left()
    }
  }
  return true
}